--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,14 +14,50 @@
         android:theme="@style/Theme.Basic"
         tools:targetApi="31">
         <activity
+            android:name=".feature.user.whatsapp_wep.WAWebActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".feature.user.deleted.DeletedActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".feature.user.status_saver.StatusSaverActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".feature.user.toolkit.ToolkitActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".feature.device_connection.DeviceConnectionActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".feature.user.UserActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-        <activity android:name=".feature.user.faqs.FAQsActivity"
-            android:exported="false"/>
+        <activity
+            android:name=".feature.user.faqs.FAQsActivity"
+            android:exported="false" />
         <activity
             android:name=".feature.backup.CoutryPhoneActivity"
             android:exported="false">
