--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,35 @@
         android:theme="@style/Theme.Basic"
         tools:targetApi="31">
         <activity
+            android:name=".feature.backup.select_file.SelectFileActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".feature.backup.waiting_share.WaitingSenderActivity"
+            android:exported="false"
+            android:theme="@style/WaitingSenderScreen">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".feature.backup.receive_file.ReceiveFileBlutoothActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".feature.backup.share_file.ShareFileActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".feature.user.whatsapp_wep.WAWebActivity"
             android:exported="false">
             <meta-data
@@ -21,7 +50,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".feature.user.deleted.DeletedActivity"
+            android:name=".feature.user.deleted_recover.DeletedRecoverActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -36,13 +65,6 @@
         </activity>
         <activity
             android:name=".feature.user.toolkit.ToolkitActivity"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
-            android:name=".feature.device_connection.DeviceConnectionActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
