--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         tools:targetApi="31">
         <activity
             android:name=".feature.backup.select_file.SelectFileActivity"
-            android:exported="false">
+            android:exported="false"
+            android:theme="@style/AppThem">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -30,59 +31,68 @@
         </activity>
         <activity
             android:name=".feature.backup.receive_file.ReceiveFileBlutoothActivity"
-            android:exported="false">
+            android:exported="false"
+            android:theme="@style/AppThem">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".feature.backup.share_file.ShareFileActivity"
-            android:exported="false">
+            android:exported="false"
+            android:theme="@style/AppThem">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".feature.user.whatsapp_wep.WAWebActivity"
-            android:exported="false">
+            android:exported="false"
+            android:theme="@style/AppThem">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".feature.user.deleted_recover.DeletedRecoverActivity"
-            android:exported="false">
+            android:exported="false"
+            android:theme="@style/AppThem">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".feature.user.status_saver.StatusSaverActivity"
-            android:exported="false">
+            android:exported="false"
+            android:theme="@style/AppThem">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".feature.user.toolkit.ToolkitActivity"
-            android:exported="false">
+            android:exported="false"
+            android:theme="@style/AppThem">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".feature.user.UserActivity"
-            android:exported="false">
+            android:exported="false"
+            android:theme="@style/AppThem">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".feature.user.faqs.FAQsActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/AppThem"/>
         <activity
             android:name=".feature.backup.CoutryPhoneActivity"
-            android:exported="false">
+            android:exported="false"
+            android:theme="@style/AppThem">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -90,14 +100,16 @@
         <activity
             android:name=".feature.backup.BackupActivity"
             android:exported="false"
-            android:windowSoftInputMode="adjustResize" />
+            android:windowSoftInputMode="adjustResize"
+            android:theme="@style/AppThem"/>
         <activity
             android:name=".feature.guide_backup.GuideBackupActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/AppThem" />
         <activity
             android:name=".feature.home.HomeActivity"
             android:exported="true"
-            android:theme="@style/App">
+            android:theme="@style/AppThem">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
